feat: Add fully automated YouTube thumbnail library builder
🤖 Automated Collection System:
- ✅ Daily collection of trending YouTube thumbnails (3 AM UTC)
- ✅ 5 niches: Tech, Gaming, Education, Entertainment, People & Blogs
- ✅ 30 videos per niche (150 total per day)
- ✅ CLIP embeddings computed for each thumbnail
- ✅ Views per hour calculated from publication time
- ✅ Auto-cleanup removes entries older than 90 days

🔧 Technical Implementation:
- ✅ APScheduler for background job scheduling
- ✅ Async HTTP client (aiohttp) for efficient API calls
- ✅ Supabase integration for database storage
- ✅ CLIP model with bytes input support
- ✅ Production-safe error handling and logging

📁 New Files:
- app/tasks/collect_thumbnails.py - Main collection logic
- app/features.py - CLIP encoding utilities
- test_collection.py - Test script for collection
- python-service/README.md - Complete setup guide

🔌 API Endpoints:
- GET /internal/refresh-library - Manual collection trigger
- Enhanced /health endpoint with scheduler status
- Proper startup/shutdown event handlers

📦 Dependencies Added:
- apscheduler==3.10.4 (background jobs)
- supabase==2.3.4 (database)
- aiohttp==3.9.1 (async HTTP)

🎯 Production Ready:
- Comprehensive error handling
- Detailed logging and monitoring
- Environment variable configuration
- Docker-ready setup
- Complete documentation

No manual scripts required - fully automated! 🚀

--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -4,6 +4,15 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.3
 python-multipart==0.0.6
 
+# Background job scheduling
+apscheduler==3.10.4
+
+# Database
+supabase==2.3.4
+
+# HTTP client for async requests
+aiohttp==3.9.1
+
 # Image processing
 Pillow==10.2.0
 opencv-python==4.9.0.80
