feat: Add nightly FAISS index rebuilding with Hobart timezone scheduling
🚀 FAISS Index Management:
- ✅ Complete FAISS index management system for fast similarity search
- ✅ Separate indices for each niche (tech, gaming, education, entertainment, people)
- ✅ Cosine similarity using IndexFlatIP for semantic matching
- ✅ Persistent storage with automatic loading from disk
- ✅ Comprehensive error handling and logging

⏰ Hobart Timezone Scheduling:
- ✅ Thumbnail collection: 3:00 AM Hobart time (Australia/Hobart)
- ✅ FAISS index rebuilding: 3:30 AM Hobart time (30 min after collection)
- ✅ Automatic timezone handling (AEST/AEDT)
- ✅ Proper job sequencing with dependency management

🔧 Technical Implementation:
- ✅ FAISSIndexManager class with full CRUD operations
- ✅ Async-compatible with proper resource management
- ✅ Memory-efficient embedding storage and retrieval
- ✅ Index statistics and health monitoring
- ✅ Manual trigger endpoints for testing

📁 New Files:
- app/indices.py - Complete FAISS index management
- test_indices.py - Comprehensive test suite
- Updated README with FAISS documentation

🔌 New API Endpoints:
- GET /internal/rebuild-indices - Manual index rebuilding
- GET /internal/index-stats - Index statistics and health
- Enhanced scheduler with dual job management

📦 Dependencies Added:
- faiss-cpu==1.7.4 (vector similarity search)
- Optional faiss-gpu support for CUDA acceleration

🎯 Production Features:
- Persistent index caching in ./indices/ directory
- Automatic index loading on startup
- Comprehensive statistics and monitoring
- Proper cleanup and resource management
- Timezone-aware scheduling for Australian users

Perfect for high-performance similarity search! 🔍

--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -13,6 +13,11 @@ supabase==2.3.4
 # HTTP client for async requests
 aiohttp==3.9.1
 
+# Vector similarity search
+faiss-cpu==1.7.4
+# For GPU acceleration (uncomment if using CUDA)
+# faiss-gpu==1.7.4
+
 # Image processing
 Pillow==10.2.0
 opencv-python==4.9.0.80
