--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -47,6 +47,13 @@ sentence-transformers==2.3.1
 numpy==1.26.3
 scipy==1.12.0
 scikit-learn==1.4.0
+python-dotenv==1.0.0
+
+# YouTube Intelligence Brain dependencies
+joblib==1.3.2  # For model serialization
+pandas==2.1.4  # For data analysis
+matplotlib==3.8.2  # For visualization (optional)
+seaborn==0.13.0  # For statistical plots (optional)
 
 # Optional: GPU acceleration (uncomment if using CUDA)
 # torch==2.1.2+cu118
