--- a/python-service/requirements.txt
+++ b/python-service/requirements.txt
@@ -1,62 +1,97 @@
+# ============================================================================
+# V1 SIMPLIFIED SCORING SYSTEM DEPENDENCIES (Core Requirements)
+# ============================================================================
+
 # Core FastAPI dependencies
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.5.3
 python-multipart==0.0.6
 
-# Background job scheduling
+# Image processing (required for V1)
+Pillow==10.2.0
+requests==2.31.0
+
+# OpenAI API for GPT-4 Vision (V1 core dependency)
+openai>=1.0.0
+
+# OCR for text clarity analysis (V1 core dependency)
+pytesseract==0.3.10
+
+# Computer vision for stable scoring (V1 core dependency)
+opencv-python==4.9.0.80
+
+# MediaPipe for face detection (V1 core dependency)
+mediapipe==0.10.8
+
+# Math and utilities (required for V1)
+numpy==1.26.3
+python-dotenv==1.0.0
+
+# ============================================================================
+# V1.1+ ADVANCED SYSTEM DEPENDENCIES (Optional - disabled by default)
+# ============================================================================
+
+# Background job scheduling (V1.1+ only)
 apscheduler==3.10.4
 
-# Database
+# Database (V1.1+ only)
 supabase==2.3.4
 
-# HTTP client for async requests
+# Credit system dependencies
+uuid
+
+# HTTP client for async requests (V1.1+ only)
 aiohttp==3.9.1
 
-# Vector similarity search
+# Vector similarity search (V1.1+ only)
 faiss-cpu==1.7.4
 # For GPU acceleration (uncomment if using CUDA)
 # faiss-gpu==1.7.4
 
-# Image processing
-Pillow==10.2.0
+# Advanced image processing (V1.1+ only)
 opencv-python==4.9.0.80
-requests==2.31.0
 
-# ML Models
+# ML Models (V1.1+ only)
 torch==2.1.2
 torchvision==0.16.2
 
-# CLIP (OpenAI's image encoder)
+# CLIP (OpenAI's image encoder) (V1.1+ only)
 git+https://github.com/openai/CLIP.git
 
-# OCR
+# Advanced OCR (V1.1+ only)
 paddleocr==2.7.0.3
 paddlepaddle==2.6.0
 
-# Face Detection & Emotion (optional - for full ML features)
+# Face Detection & Emotion (V1.1+ only)
 # retinaface==0.0.17  # Version not available, use 1.1.1 if needed
 # fer==22.5.1
 # mtcnn==0.1.1
 
-# Text Processing
+# Text Processing (V1.1+ only)
 transformers==4.37.0
 sentence-transformers==2.3.1
 
-# Utilities
-numpy==1.26.3
+# Advanced utilities (V1.1+ only)
 scipy==1.12.0
 scikit-learn==1.4.0
-python-dotenv==1.0.0
 
-# YouTube Intelligence Brain dependencies
+# YouTube Intelligence Brain dependencies (V1.1+ only)
 joblib==1.3.2  # For model serialization
 pandas==2.1.4  # For data analysis
 matplotlib==3.8.2  # For visualization (optional)
 seaborn==0.13.0  # For statistical plots (optional)
 
-# Optional: GPU acceleration (uncomment if using CUDA)
-# torch==2.1.2+cu118
-# torchvision==0.16.2+cu118
-# --extra-index-url https://download.pytorch.org/whl/cu118
+# ============================================================================
+# INSTALLATION INSTRUCTIONS
+# ============================================================================
+
+# For V1 (Stable System):
+# pip install fastapi uvicorn pydantic python-multipart Pillow requests openai pytesseract opencv-python mediapipe numpy python-dotenv
+
+# For V1.1+ (Full System):
+# pip install -r requirements.txt
+
+# Note: For V1, you only need the core dependencies listed at the top.
+# The advanced dependencies are automatically disabled when USE_FAISS=False.
 
