--- a/python-service/requirements-railway.txt
+++ b/python-service/requirements-railway.txt
@@ -4,13 +4,12 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 opencv-python-headless==4.8.1.78
 pillow==10.1.0
-numpy==1.24.3
+numpy<2.0.0
 pytesseract==0.3.10
 openai==1.3.7
 httpx==0.25.2
 supabase==2.0.2
 apscheduler==3.10.4
-jose==1.0.0
 python-jose[cryptography]==3.3.0
 stripe==7.8.0
 resend==0.6.0
