--- a/python-service/requirements-railway.txt
+++ b/python-service/requirements-railway.txt
@@ -7,7 +7,7 @@ pillow==10.1.0
 numpy<2.0.0
 pytesseract==0.3.10
 openai==1.3.7
-httpx==0.25.2
+httpx>=0.24.0,<0.25.0
 supabase==2.0.2
 apscheduler==3.10.4
 python-jose[cryptography]==3.3.0
